all styles done. fixed a bug not showing time schedule

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,3 +66,13 @@ a {
   background-color:white;
   height:680px;
 }
+
+.details > div {
+  display:flex;
+  padding:30px;
+}
+
+article {
+  padding-left:50px;
+  width:50%;
+}
